game centre page added

--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -121,10 +121,10 @@
       >
         <a
           class="flex flex-col justify-center items-center"
-          href="index.html"
+          href="../index.html"
           target="_blank"
           ><img
-            src="assets/img/genesis-logo.png"
+            src="../assets/img/genesis-logo.png"
             class="w-8 md:w-10 lg:w-16 2xl:w-20"
             alt="На главную"
           />
@@ -149,7 +149,7 @@
         <div class="flex lg:ml-4">
           <a
             ><img
-              src="assets/img/game-centre-logo.png"
+              src="../assets/img/game-centre-logo.png"
               alt=""
               class="w-20 lg:w-32 2xl:w-40"
           /></a>
@@ -166,7 +166,7 @@
           <div class="ml-4 lg:ml-6 2xl:ml-10">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
-                src="assets/img/vk-logo.svg"
+                src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
                 class="size-6 md:size-10"
             /></a>
@@ -325,7 +325,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/fedotikov-photo.jpeg"
+                    src="../assets/img/fedotikov-photo.jpeg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -354,7 +354,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/yurkov-photo.jpg"
+                    src="../assets/img/yurkov-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -365,19 +365,34 @@
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
                     <a href="/docs/yurkov-1.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-1.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-1.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-2.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-2.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-2.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-3.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-3.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-3.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-4.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-4.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-4.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-5.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-5.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-5.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                   </div>
                   <div
@@ -425,7 +440,7 @@
             <h2 class="px-3 pb-2 text-center">FC 24</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="assets/img/fc24.jpg"
+                src="../assets/img/fc24.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -438,7 +453,7 @@
             <h2 class="px-3 pb-2 text-center">Marvel’s spider man</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="assets/img/spiderman.jpg"
+                src="../assets/img/spiderman.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -453,7 +468,7 @@
             <h2 class="px-3 pb-2 text-center">Horizon</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="assets/img/horizon.jpg"
+                src="../assets/img/horizon.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -555,12 +570,12 @@
             <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
-            ><img src="assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
     </footer>
-    <script type="module" src="assets/js/index.js"></script>
+    <script type="module" src="../assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
