game centre page added

--- a/client/index.html
+++ b/client/index.html
@@ -153,7 +153,7 @@
           </li>
         </ul>
         <div class="flex lg:ml-4">
-          <a href="pages/game.html" target="_blank"
+          <a href="game.html" target="_blank"
             ><img
               src="assets/img/game-centre-logo.png"
               alt="Центр игровой психологической поддержки"
