--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -74,8 +74,6 @@
     </script>
 
     <title>Центр игровой психологической поддержки</title>
-    <script type="module" crossorigin src="/assets/main-uyU-BuVe.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-B8oS4gPo.css">
   </head>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -123,10 +121,10 @@
       >
         <a
           class="flex flex-col justify-center items-center"
-          href="index.html"
+          href="../index.html"
           target="_blank"
           ><img
-            src="/assets/genesis-logo-O831EG8R.png"
+            src="../assets/img/genesis-logo.png"
             class="w-8 md:w-10 lg:w-16 2xl:w-20"
             alt="На главную"
           />
@@ -151,7 +149,7 @@
         <div class="flex lg:ml-4">
           <a
             ><img
-              src="/assets/game-centre-logo-XGWqlRf7.png"
+              src="../assets/img/game-centre-logo.png"
               alt=""
               class="w-20 lg:w-32 2xl:w-40"
           /></a>
@@ -168,7 +166,7 @@
           <div class="ml-4 lg:ml-6 2xl:ml-10">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
-                src="data:image/svg+xml,%3csvg%20width='101'%20height='100'%20viewBox='0%200%20101%20100'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cg%20clip-path='url(%23clip0_2_40)'%3e%3cpath%20d='M0.5%2048C0.5%2025.3726%200.5%2014.0589%207.52944%207.02944C14.5589%200%2025.8726%200%2048.5%200H52.5C75.1274%200%2086.4411%200%2093.4706%207.02944C100.5%2014.0589%20100.5%2025.3726%20100.5%2048V52C100.5%2074.6274%20100.5%2085.9411%2093.4706%2092.9706C86.4411%20100%2075.1274%20100%2052.5%20100H48.5C25.8726%20100%2014.5589%20100%207.52944%2092.9706C0.5%2085.9411%200.5%2074.6274%200.5%2052V48Z'%20fill='%230077FF'/%3e%3cpath%20d='M53.7085%2072.042C30.9168%2072.042%2017.9169%2056.417%2017.3752%2030.417H28.7919C29.1669%2049.5003%2037.5834%2057.5836%2044.25%2059.2503V30.417H55.0004V46.8752C61.5837%2046.1669%2068.4995%2038.667%2070.8329%2030.417H81.5832C79.7915%2040.5837%2072.2915%2048.0836%2066.9582%2051.1669C72.2915%2053.6669%2080.8336%2060.2086%2084.0836%2072.042H72.2499C69.7082%2064.1253%2063.3754%2058.0003%2055.0004%2057.1669V72.042H53.7085Z'%20fill='white'/%3e%3c/g%3e%3cdefs%3e%3cclipPath%20id='clip0_2_40'%3e%3crect%20width='100'%20height='100'%20fill='white'%20transform='translate(0.5)'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e"
+                src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
                 class="size-6 md:size-10"
             /></a>
@@ -327,7 +325,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="/assets/fedotikov-photo-rxxvc03r.jpeg"
+                    src="../assets/img/fedotikov-photo.jpeg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -356,7 +354,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="/assets/yurkov-photo-CO4lhRSm.jpg"
+                    src="../assets/img/yurkov-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -367,19 +365,34 @@
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
                     <a href="/docs/yurkov-1.pdf" target="_blank"
-                      ><img src="/assets/yurkov-1-5GYyzrpY.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-1.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-2.pdf" target="_blank"
-                      ><img src="/assets/yurkov-2-7G_31ux9.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-2.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-3.pdf" target="_blank"
-                      ><img src="/assets/yurkov-3-SPZwM6pk.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-3.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-4.pdf" target="_blank"
-                      ><img src="/assets/yurkov-4-7QOdLvzf.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-4.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-5.pdf" target="_blank"
-                      ><img src="/assets/yurkov-5-wvEBrBXS.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-5.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                   </div>
                   <div
@@ -427,7 +440,7 @@
             <h2 class="px-3 pb-2 text-center">FC 24</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="/assets/fc24-q7tWXLWG.jpg"
+                src="../assets/img/fc24.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -440,7 +453,7 @@
             <h2 class="px-3 pb-2 text-center">Marvel’s spider man</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="/assets/spiderman-NMdxF5mB.jpg"
+                src="../assets/img/spiderman.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -455,7 +468,7 @@
             <h2 class="px-3 pb-2 text-center">Horizon</h2>
             <div class="flex justify-center items-center pt-5 pb-5">
               <img
-                src="/assets/horizon-Ec2CYEMg.jpg"
+                src="../assets/img/horizon.jpg"
                 class="w-1/2 opacity-90 rounded-md"
                 alt="development and help"
               />
@@ -557,11 +570,12 @@
             <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
-            ><img src="data:image/svg+xml,%3csvg%20width='101'%20height='100'%20viewBox='0%200%20101%20100'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cg%20clip-path='url(%23clip0_2_40)'%3e%3cpath%20d='M0.5%2048C0.5%2025.3726%200.5%2014.0589%207.52944%207.02944C14.5589%200%2025.8726%200%2048.5%200H52.5C75.1274%200%2086.4411%200%2093.4706%207.02944C100.5%2014.0589%20100.5%2025.3726%20100.5%2048V52C100.5%2074.6274%20100.5%2085.9411%2093.4706%2092.9706C86.4411%20100%2075.1274%20100%2052.5%20100H48.5C25.8726%20100%2014.5589%20100%207.52944%2092.9706C0.5%2085.9411%200.5%2074.6274%200.5%2052V48Z'%20fill='%230077FF'/%3e%3cpath%20d='M53.7085%2072.042C30.9168%2072.042%2017.9169%2056.417%2017.3752%2030.417H28.7919C29.1669%2049.5003%2037.5834%2057.5836%2044.25%2059.2503V30.417H55.0004V46.8752C61.5837%2046.1669%2068.4995%2038.667%2070.8329%2030.417H81.5832C79.7915%2040.5837%2072.2915%2048.0836%2066.9582%2051.1669C72.2915%2053.6669%2080.8336%2060.2086%2084.0836%2072.042H72.2499C69.7082%2064.1253%2063.3754%2058.0003%2055.0004%2057.1669V72.042H53.7085Z'%20fill='white'/%3e%3c/g%3e%3cdefs%3e%3cclipPath%20id='clip0_2_40'%3e%3crect%20width='100'%20height='100'%20fill='white'%20transform='translate(0.5)'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e" alt="vk-logo" class="size-8"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
     </footer>
+    <script type="module" src="../assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
