--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -121,7 +121,7 @@
       >
         <a
           class="flex flex-col justify-center items-center"
-          href="../index.html"
+          href="index.html"
           target="_blank"
           ><img
             src="../assets/img/genesis-logo.png"
