--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -123,7 +123,7 @@
       >
         <a href="#"
           ><img
-            src="assets/img/genesis-logo.png"
+            src="../assets/img/genesis-logo.png"
             class="w-10 md:w-16 pr-4 2xl:w-20"
             alt=""
         /></a>
@@ -153,9 +153,9 @@
           </li>
         </ul>
         <div class="flex lg:ml-4">
-          <a href="pages/game.html" target="_blank"
+          <a href="game.html" target="_blank"
             ><img
-              src="assets/img/game-centre-logo.png"
+              src="../assets/img/game-centre-logo.png"
               alt="Центр игровой психологической поддержки"
               class="w-20 md:w-24 lg:w-40"
           /></a>
@@ -172,7 +172,7 @@
           <div class="ml-4 lg:ml-6 2xl:ml-10">
             <a href="https://vk.com/genesiskrsk" target="_blank"
               ><img
-                src="assets/img/vk-logo.svg"
+                src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
                 class="size-6 md:size-10"
             /></a>
@@ -253,7 +253,7 @@
               <li>- Заключение на психолого-педагогическую экспертизу</li>
             </ul>
             <img
-              src="assets/img/court-expertise.jpg"
+              src="../assets/img/court-expertise.jpg"
               alt="court-expertise"
               class="hidden md:block md:w-3/12 lg:block w-1/5 opacity-75 rounded-xl"
             />
@@ -275,7 +275,7 @@
                   <h2 class="text-center">Консультирование</h2>
                   <div class="flex justify-center items-center pt-5 pb-5">
                     <img
-                      src="assets/img/consultation.jpg"
+                      src="../assets/img/consultation.jpg"
                       class="w-1/2 opacity-85 rounded-3xl"
                       alt="consultations"
                     />
@@ -331,7 +331,7 @@
                   <h2 class="text-center">Диагностика</h2>
                   <div class="flex justify-center items-center pt-5 pb-5">
                     <img
-                      src="assets/img/diagnostics.jpg"
+                      src="../assets/img/diagnostics.jpg"
                       class="w-1/2 opacity-85 rounded-3xl"
                       alt="diagnostics"
                     />
@@ -369,7 +369,7 @@
                   <h2 class="text-center">Коррекция</h2>
                   <div class="flex justify-center items-center pt-5 pb-5">
                     <img
-                      src="assets/img/correction.jpg"
+                      src="../assets/img/correction.jpg"
                       class="w-1/2 opacity-85 rounded-3xl"
                       alt="correction"
                     />
@@ -412,7 +412,7 @@
                   <h2 class="text-center">Медиация</h2>
                   <div class="flex justify-center items-center pt-5 pb-5">
                     <img
-                      src="assets/img/mediation.jpg"
+                      src="../assets/img/mediation.jpg"
                       class="w-1/2 opacity-85 rounded-3xl"
                       alt="mediation"
                     />
@@ -468,7 +468,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/yurkov-photo.jpg"
+                    src="../assets/img/yurkov-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -479,19 +479,34 @@
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
                     <a href="/docs/yurkov-1.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-1.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-1.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-2.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-2.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-2.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-3.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-3.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-3.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-4.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-4.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-4.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                     <a href="/docs/yurkov-5.pdf" target="_blank"
-                      ><img src="assets/img/yurkov-5.jpg" class="w-10" alt=""
+                      ><img
+                        src="../assets/img/yurkov-5.jpg"
+                        class="w-10"
+                        alt=""
                     /></a>
                   </div>
                   <div
@@ -520,7 +535,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/egle-photo.jpg"
+                    src="../assets/img/egle-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -531,13 +546,13 @@
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
                     <a href="/docs/egle-1.pdf" target="_blank"
-                      ><img src="assets/img/egle-1.jpg" class="w-10" alt=""
+                      ><img src="../assets/img/egle-1.jpg" class="w-10" alt=""
                     /></a>
                     <a href="/docs/egle-2.pdf" target="_blank"
-                      ><img src="assets/img/egle-2.jpg" class="w-10" alt=""
+                      ><img src="../assets/img/egle-2.jpg" class="w-10" alt=""
                     /></a>
                     <a href="/docs/egle-3.pdf" target="_blank"
-                      ><img src="assets/img/egle-3.jpg" class="w-10" alt=""
+                      ><img src="../assets/img/egle-3.jpg" class="w-10" alt=""
                     /></a>
                   </div>
                   <div
@@ -564,7 +579,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/yaroshevich-photo.jpg"
+                    src="../assets/img/yaroshevich-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -576,13 +591,13 @@
                   <div class="flex justify-center items-center gap-x-3">
                     <a href="/docs/yaroshevich-1.pdf" target="_blank"
                       ><img
-                        src="assets/img/yaroshevich-1.jpg"
+                        src="../assets/img/yaroshevich-1.jpg"
                         class="w-10"
                         alt=""
                     /></a>
                     <a href="/docs/yaroshevich-2.pdf" target="_blank"
                       ><img
-                        src="assets/img/yaroshevich-2.jpg"
+                        src="../assets/img/yaroshevich-2.jpg"
                         class="w-10"
                         alt=""
                     /></a>
@@ -622,7 +637,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/kutsonets.png"
+                    src="../assets/img/kutsonets.png"
                     alt="expert photo"
                     class="rounded-md h-full"
                   />
@@ -663,7 +678,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/kunitsina-photo.jpg"
+                    src="../assets/img/kunitsina-photo.jpg"
                     alt="expert photo"
                     class="w-4/5 rounded-md"
                   />
@@ -698,7 +713,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/snyatkova-photo.jpg"
+                    src="../assets/img/snyatkova-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -733,7 +748,7 @@
                   class="flex justify-center w-96 h-96 overflow-hidden rounded-md m-2"
                 >
                   <img
-                    src="assets/img/maz-photo.jpg"
+                    src="../assets/img/maz-photo.jpg"
                     alt="expert photo"
                     class="rounded-md"
                   />
@@ -798,7 +813,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="assets/img/edu-help-1.jpg"
+                  src="../assets/img/edu-help-1.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -814,7 +829,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="assets/img/edu-help-2.jpg"
+                  src="../assets/img/edu-help-2.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -830,7 +845,7 @@
             >
               <div class="flex justify-center items-center pt-5 pb-5">
                 <img
-                  src="assets/img/edu-help-3.jpg"
+                  src="../assets/img/edu-help-3.jpg"
                   class="w-1/2 opacity-85 rounded-3xl"
                   alt="development and help"
                 />
@@ -849,13 +864,13 @@
         <div class="flex justify-center items-center gap-x-12 mb-5">
           <a href="/docs/certificate.pdf" target="_blank"
             ><img
-              src="assets/img/certificate.jpeg"
+              src="../assets/img/certificate.jpeg"
               alt="certificate"
               class="w-[160px] opacity-75"
           /></a>
           <a href="/docs/charter.pdf" target="_blank"
             ><img
-              src="assets/img/charter.jpg"
+              src="../assets/img/charter.jpg"
               alt="charter"
               class="w-[160px] opacity-75"
           /></a>
@@ -952,12 +967,12 @@
             <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
-            ><img src="assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
     </footer>
-    <script type="module" src="assets/js/index.js"></script>
+    <script type="module" src="../assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
