--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -140,7 +140,7 @@
             <a href="#authors">Авторы</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
-            <a href="#gameplay">Библиотека игр</a>
+            <a href="gamelib.html" target="_blank">Библиотека игр</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
             <a href="#contacts">Контакты</a>
@@ -282,7 +282,7 @@
           </div>
         </div>
       </section>
-      <section class="dark:bg-slate-800 bg-slate-300 text-slate-600">
+      <section class="mx-auto px-2 mb-4 pb-2">
         <div class="w-full">
           <a id="method" class="scroll-mt-28"></a>
 
@@ -308,7 +308,9 @@
           </div>
         </div>
       </section>
-      <section class="mx-auto px-2 mb-4 pb-2">
+      <section
+        class="mx-auto dark:bg-slate-800 bg-slate-300 text-slate-600 lg:px-10 mb-4 pb-4"
+      >
         <a id="authors" class="scroll-mt-28"></a>
         <h1 class="text-center">
           Авторы методики «Консультирование с помощью видеоигр»
@@ -425,58 +427,6 @@
           <!--            class="hidden lg:flex swiper-navBtn swiper-button-prev"-->
           <!--          ></div>-->
           <!--          <div class="swiper-pagination"></div>-->
-        </div>
-      </section>
-      <section
-        class="mx-auto dark:bg-slate-800 bg-slate-300 text-slate-600 lg:px-10 mb-4 pb-4"
-      >
-        <a id="gameplay" class="scroll-mt-28"></a>
-        <h1>Библиотека игр</h1>
-        <h2 class="text-center mb-4">Игровая консоль: Playstation 4</h2>
-        <div class="md:grid grid-cols-11 gap-x-10 gap-y-2">
-          <div
-            class="col-start-2 col-end-5 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
-          >
-            <h2 class="px-3 pb-2 text-center">FC 24</h2>
-            <div class="flex justify-center items-center pt-5 pb-5">
-              <img
-                src="../assets/img/fc24.jpg"
-                class="w-1/2 opacity-90 rounded-md"
-                alt="development and help"
-              />
-            </div>
-            <p class="px-3 pb-2 text-center">Футбольный симулятор</p>
-          </div>
-          <div
-            class="col-start-5 col-end-8 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
-          >
-            <h2 class="px-3 pb-2 text-center">Marvel’s spider man</h2>
-            <div class="flex justify-center items-center pt-5 pb-5">
-              <img
-                src="../assets/img/spiderman.jpg"
-                class="w-1/2 opacity-90 rounded-md"
-                alt="development and help"
-              />
-            </div>
-            <p class="px-3 pb-2 text-center">
-              Игра про супергероя Человека-паука
-            </p>
-          </div>
-          <div
-            class="col-start-8 col-end-11 dark:bg-slate-900 bg-slate-100 h-full md:rounded-xl"
-          >
-            <h2 class="px-3 pb-2 text-center">Horizon</h2>
-            <div class="flex justify-center items-center pt-5 pb-5">
-              <img
-                src="../assets/img/horizon.jpg"
-                class="w-1/2 opacity-90 rounded-md"
-                alt="development and help"
-              />
-            </div>
-            <p class="px-3 pb-2 text-center">
-              Игра про девушку, спасающую человечество
-            </p>
-          </div>
         </div>
       </section>
       <section class="px-2 mb-4 pb-2">
