--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -158,8 +158,8 @@
             <a href="tel:+79029272400"
               ><p class="text-sm lg:text-base">+7 902 927-24-00</p></a
             >
-            <a href="tel:+79504062612"
-              ><p class="text-sm lg:text-base">+7 950 406-26-12</p></a
+            <a href="tel:+79831992391"
+              ><p class="text-sm lg:text-base">+7 983 199-23-91</p></a
             >
           </div>
           <div class="ml-4 lg:ml-6 2xl:ml-10">
@@ -439,12 +439,12 @@
             <p>+7(950) 981-54-81 Куницина Екатерина</p>
             <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
             <p>+7(902) 927-24-00 Юрков Дмитрий Владимирович</p>
+            <h2 class="p-0">Email:</h2>
             <p>genesispsykrsk@gmail.com</p>
-            <h2 class="p-0 mt-2">Директор:</h2>
-            <p>Милованова Екатерина</p>
-            <p>+7 950 406-26-12</p>
-            <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-            <p>Федотиков Матвей</p>
+            <h2 class="p-0">Директор:</h2>
+            <p>Федотиков Матвей Александрович</p>
+            <p>+7(983) 199-23-91</p>
+            <p>matveyfedotikov@gmail.com</p>
           </div>
         </div>
 
@@ -458,13 +458,12 @@
               <p>Куницина Екатерина</p>
               <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
               <p>+7(902) 927-24-00</p>
-              <p>Юрков Дмитрий</p>
+              <p>Юрков Дмитрий Владимирович</p>
+              <h2 class="p-0">Email:</h2>
               <p>genesispsykrsk@gmail.com</p>
-              <h2 class="p-0 mt-2">Директор:</h2>
-              <p>Милованова Екатерина</p>
-              <p>+7 950 406-26-12</p>
-              <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-              <p>Федотиков Матвей</p>
+              <h2 class="p-0">Директор:</h2>
+              <p>Федотиков Матвей Александрович</p>
+              <p>+7(983) 199-23-91</p>
               <p>matveyfedotikov@gmail.com</p>
             </div>
           </div>
@@ -525,7 +524,7 @@
             class="hidden md:flex flex-col justify-center gap-y-2 items-center text-white"
           >
             <a href="tel:+79029272400">+7 902 927-24-00</a>
-            <a href="tel:+79504062612">+7 950 406-26-12</a>
+            <a href="tel:+79831992391">+7 983 199-23-91</a>
           </div>
           <a href="https://vk.com/dmitryurk"
             ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
