--- a/client/index.html
+++ b/client/index.html
@@ -959,6 +959,7 @@
       </div>
     </footer>
     <script type="module" src="assets/js/index.js"></script>
+    <script type="module" src="assets/js/games.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
