--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -326,5 +326,6 @@
       </div>
     </footer>
     <script type="module" src="../assets/js/index.js"></script>
+    <script type="module" src="../assets/js/games.js"></script>
   </body>
 </html>
