--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -250,7 +250,7 @@
           <div>Сокращения: Playstation – PS</div>
           <div>Персональный компьютер или ноутбук – ПК</div>
         </div>
-        <div class="collapse md:visible mt-10">
+        <div class="hidden md:block mt-10">
           <table class="table-auto">
             <thead>
               <tr class="text-slate-900 dark:text-slate-100">
