--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -267,7 +267,7 @@
         </div>
         <div id="minitable" class="flex flex-col md:hidden"></div>
       </section>
-      <a href="#" class="fixed bottom-2 right-4 z-10"
+      <a href="#" class="fixed botton-2 right-4 z-10"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
