--- a/client/index.html
+++ b/client/index.html
@@ -794,10 +794,10 @@
       >
         <a id="projects" class="scroll-mt-28"></a>
         <h1 class="text-center">Проекты</h1>
-        <div class="flex flex-col">
+        <div class="flex flex-col gap-2">
           <!-- First Card -->
           <div
-            class="card md:dark:bg-slate-900 md:bg-slate-100 md:rounded-2xl md:w-4/6 md:m-4 md:p-4"
+            class="card dark:bg-slate-900 bg-slate-100 md:rounded-2xl md:w-4/6 md:m-4 md:p-4"
           >
             <div class="tabs">
               <ul class="tabs-menu">
@@ -851,14 +851,24 @@
               </table>
             </div>
             <div class="tab-content px-2" id="second-tab">
-              Дети-подростки в возрасте с 10 до 17 лет, отдыхающие в
-              муниципальном загородном оздоровительном лагере «Ласточка», на
-              протяжении 4-ех сезонов проходили индивидуальные психологические
-              консультации с психологами «Генезис» с помощью новейшей авторской
-              методики, которая в своей работы использует видеоигры в качестве
-              инструмента. Кроме того, проведены семинары о видеоиграх и их
-              месте в жизни, культуре и их влиянии на психологическое и
-              эмоциональное здоровье.
+              <div class="flex flex-col md:flex-row">
+                <img
+                  src="./assets/img/gameplayproject1.jpeg"
+                  alt="Видеоигры1"
+                  class="hidden md:block md:w-1/3 cursor-pointer pr-2"
+                  onclick="openModal(this.src)"
+                />
+                <p>
+                  Дети-подростки в возрасте с 10 до 17 лет, отдыхающие в
+                  муниципальном загородном оздоровительном лагере «Ласточка», на
+                  протяжении 4-ех сезонов проходили индивидуальные
+                  психологические консультации с психологами «Генезис» с помощью
+                  новейшей авторской методики, которая в своей работы использует
+                  видеоигры в качестве инструмента. Кроме того, проведены
+                  семинары о видеоиграх и их месте в жизни, культуре и их
+                  влиянии на психологическое и эмоциональное здоровье.
+                </p>
+              </div>
             </div>
             <div class="tab-content" id="third-tab">
               <div class="flex flex-col flex-wrap md:flex-row">
@@ -939,24 +949,36 @@
               </table>
             </div>
             <div class="tab-content px-2" id="fifth-tab">
-              В рамках проекта на протяжении летнего периода 2024 года
-              проводились на еженедельной основе киберспортивные тренировки по
-              дисциплинам: Dota 2, Counter-strike 2, MK1 и EA FC 24 с участием
-              киберспортивного тренера и психолога. Прорабатывались: умение
-              работать с собственными эмоциями, повышение стрессоустойчивости,
-              развитие коммуникативных навыков, повышение уверенности в себе.
-              Кроме того, еженедельно проводились ценностно-смысловые дни, в
-              рамках которых подростки совместно с психологами проходили
-              сюжетноориентированные игры (The last of us, Ghost of Tsushima,
-              God of war: Ragnarek), где прорабатывались: самоосознание,
-              семейные ценности, инициатива и т.д. По итогам проекта был
-              проведен киберспортивный турнир, а также проведена работа с
-              родителями, в результате которой был снят видеоподкаст с
-              психологами, где были разобраны все вопросы родительского
-              сообщества о видеоиграх и их влиянии на детей. Публикации в СМИ:
-              <a class="text-" href="https://www.enisey.tv/news/post-69581/"
-                >https://www.enisey.tv/news/post-69581/</a
-              >
+              <div class="flex flex-col md:flex-row">
+                <img
+                  src="./assets/img/cypepsycho1.jpeg"
+                  alt="Видеоигры1"
+                  class="hidden md:block md:w-1/3 h-full cursor-pointer pr-2"
+                  onclick="openModal(this.src)"
+                />
+                <p>
+                  В рамках проекта на протяжении летнего периода 2024 года
+                  проводились на еженедельной основе киберспортивные тренировки
+                  по дисциплинам: Dota 2, Counter-strike 2, MK1 и EA FC 24 с
+                  участием киберспортивного тренера и психолога.
+                  Прорабатывались: умение работать с собственными эмоциями,
+                  повышение стрессоустойчивости, развитие коммуникативных
+                  навыков, повышение уверенности в себе. Кроме того, еженедельно
+                  проводились ценностно-смысловые дни, в рамках которых
+                  подростки совместно с психологами проходили
+                  сюжетноориентированные игры (The last of us, Ghost of
+                  Tsushima, God of war: Ragnarek), где прорабатывались:
+                  самоосознание, семейные ценности, инициатива и т.д. По итогам
+                  проекта был проведен киберспортивный турнир, а также проведена
+                  работа с родителями, в результате которой был снят
+                  видеоподкаст с психологами, где были разобраны все вопросы
+                  родительского сообщества о видеоиграх и их влиянии на детей.
+                  Публикации в СМИ:
+                  <a class="text-" href="https://www.enisey.tv/news/post-69581/"
+                    >https://www.enisey.tv/news/post-69581/</a
+                  >
+                </p>
+              </div>
             </div>
             <div class="tab-content" id="sixth-tab">
               <div class="flex flex-col md:flex-row flex-wrap justify-center">
