--- a/client/index.html
+++ b/client/index.html
@@ -801,9 +801,15 @@
           >
             <div class="tabs">
               <ul class="tabs-menu">
-                <li class="is-active" data-target="first-tab"><a>Проект</a></li>
-                <li data-target="second-tab"><a>Описание проекта</a></li>
-                <li data-target="third-tab"><a>Фото</a></li>
+                <li class="is-active" data-target="first-tab">
+                  <a class="text-slate-100">Проект</a>
+                </li>
+                <li data-target="second-tab">
+                  <a class="text-slate-100">Описание проекта</a>
+                </li>
+                <li data-target="third-tab">
+                  <a class="text-slate-100">Фото</a>
+                </li>
               </ul>
             </div>
             <div class="tab-content" id="first-tab">
@@ -895,10 +901,14 @@
             <div class="tabs">
               <ul class="tabs-menu">
                 <li class="is-active" data-target="fourth-tab">
-                  <a>Проект</a>
+                  <a class="text-slate-100">Проект</a>
                 </li>
-                <li data-target="fifth-tab"><a>Описание проекта</a></li>
-                <li data-target="sixth-tab"><a>Фото</a></li>
+                <li data-target="fifth-tab">
+                  <a class="text-slate-100">Описание проекта</a>
+                </li>
+                <li data-target="sixth-tab">
+                  <a class="text-slate-100">Фото</a>
+                </li>
               </ul>
             </div>
             <div class="tab-content" id="fourth-tab">
