added small fixes to gamelib and card other services dynamic appearance

--- a/client/index.html
+++ b/client/index.html
@@ -278,187 +278,13 @@
         <div class="w-full dark:bg-slate-800 bg-slate-300 text-slate-600">
           <a id="services" class="scroll-mt-28"></a>
           <h1>Другие услуги центра:</h1>
+
           <div
-            class="container swiper mt-5 mb-5 flex justify-center items-center"
+            class="container swiper mt-5 mb-5 flex justify-center items-center main-swiper"
           >
-            <div class="slide-services-container overflow-hidden">
-              <div id="slider-services" class="swiper-wrapper pb-5">
-                <div
-                  class="swiper-slide rounded-md flex flex-col justify-center items-center"
-                >
-                  <h2 class="text-center">Консультирование</h2>
-                  <div class="flex justify-center items-center pt-5 pb-5">
-                    <img
-                      src="assets/img/consultation.jpg"
-                      class="w-1/2 opacity-85 rounded-3xl"
-                      alt="consultations"
-                    />
-                  </div>
-                  <div class="container swiper text-center">
-                    <div class="slide-consult-container overflow-hidden">
-                      <div class="swiper-wrapper pb-5">
-                        <div class="swiper-slide px-2">
-                          <ul>
-                            <li>рецензия на психологические экспертизы;</li>
-                            <li>этические экспертизы;</li>
-                            <li>
-                              сопровождение несовершеннолетних в уголовном
-                              процессе.
-                            </li>
-                          </ul>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            проведение психологического консультирования
-                            подростков и их родителей (законных представителей)
-                          </p>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            консультации по вопросам детско-родительских
-                            отношений, межличностных коммуникации и социализации
-                            детей и подростков, вопросам правового характера,
-                            связанным с воспитанием и обучением детей,
-                            профориентации, семейное консультирование)
-                          </p>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            реализация комплексной программы психологического
-                            сопровождения учителей общеобразовательных школ
-                            города Красноярска и Красноярского края с целью
-                            снижения виктимизации педагогов в случаях проявления
-                            агрессивного поведения школьников
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      id="pagination-consult"
-                      class="swiper-pagination"
-                    ></div>
-                  </div>
-                </div>
-                <div
-                  class="swiper-slide rounded-md flex flex-col justify-center items-center"
-                >
-                  <h2 class="text-center">Диагностика</h2>
-                  <div class="flex justify-center items-center pt-5 pb-5">
-                    <img
-                      src="assets/img/diagnostics.jpg"
-                      class="w-1/2 opacity-85 rounded-3xl"
-                      alt="diagnostics"
-                    />
-                  </div>
-                  <div class="container swiper text-center">
-                    <div class="slide-diagnostics-container overflow-hidden">
-                      <div class="swiper-wrapper pb-5">
-                        <div class="swiper-slide px-2">
-                          <p>
-                            проведение психолого-педагогического обследования
-                            детей дошкольного и школьного возраста с целью
-                            определению уровня актуального развития и
-                            дальнейшего прохождения ПМПК. Составление
-                            рекомендаций по дальнейшему образовательному
-                            маршруту
-                          </p>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            диагностика уровня речевого развития, постановка,
-                            автоматизация и дифференциация звуков в речи
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      id="pagination-diagnostics"
-                      class="swiper-pagination"
-                    ></div>
-                  </div>
-                </div>
-                <div
-                  class="swiper-slide rounded-md flex flex-col justify-center items-center"
-                >
-                  <h2 class="text-center">Коррекция</h2>
-                  <div class="flex justify-center items-center pt-5 pb-5">
-                    <img
-                      src="assets/img/correction.jpg"
-                      class="w-1/2 opacity-85 rounded-3xl"
-                      alt="correction"
-                    />
-                  </div>
-                  <div class="container swiper text-center">
-                    <div class="slide-correction-container overflow-hidden">
-                      <div class="swiper-wrapper pb-5">
-                        <div class="swiper-slide px-2">
-                          <p>
-                            проведение индивидуальных и групповых
-                            коррекционно-развивающих занятий с детьми
-                            дошкольного и младшего школьного возраста
-                          </p>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            использование нейропсихологических методик в работе
-                            с детьми с СДВГ, РАС, имеющими трудности обучения в
-                            школе, с нарушением внимания, памяти, мышления
-                          </p>
-                        </div>
-                        <div class="swiper-slide px-2">
-                          <p>
-                            проведение индивидуальных и групповых занятий с
-                            детьми старшего дошкольного возраста по подготовке к
-                            школе
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      id="pagination-correction"
-                      class="swiper-pagination"
-                    ></div>
-                  </div>
-                </div>
-                <div
-                  class="swiper-slide rounded-md flex flex-col justify-center items-center"
-                >
-                  <h2 class="text-center">Медиация</h2>
-                  <div class="flex justify-center items-center pt-5 pb-5">
-                    <img
-                      src="assets/img/mediation.jpg"
-                      class="w-1/2 opacity-85 rounded-3xl"
-                      alt="mediation"
-                    />
-                  </div>
-                  <div class="container swiper text-center">
-                    <div class="slide-mediation-container overflow-hidden">
-                      <div class="swiper-wrapper pb-5">
-                        <div class="swiper-slide px-2">
-                          <p>
-                            Медиация – технология, позволяющая «услышать» друг
-                            друга и сэкономить время и ресурсы. В конфликте
-                            всегда есть выход!
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      id="pagination-mediation"
-                      class="swiper-pagination"
-                    ></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div
-              id="button-next-services"
-              class="hidden lg:flex swiper-navBtn swiper-button-next"
-            ></div>
-            <div
-              id="button-prev-services"
-              class="hidden lg:flex swiper-navBtn swiper-button-prev"
-            ></div>
+            <div class="swiper-wrapper"></div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+            <div class="swiper-button-prev swiper-navBtn"></div>
           </div>
 
           <div class="lg:grid grid-cols-12 mx-auto px-10">
@@ -817,44 +643,53 @@
                 Психологические консультации с помощью видеоигр в загородных
                 оздоровительных лагерях.
               </h2>
-              <table
-                class="table-fixed mt-3 border-separate border-spacing-y-4 px-2"
-              >
-                <tbody>
-                  <tr>
-                    <td class="font-bold">Срок реализации:</td>
-                    <td>Летний период 2024 года.</td>
-                  </tr>
-                  <tr>
-                    <td class="font-bold">Охват:</td>
-                    <td>
-                      Более 1500 детей, проживающих на территории города
-                      Красноярска.
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="font-bold">Место проведения:</td>
-                    <td>Загородный лагерь «Ласточка».</td>
-                  </tr>
-                  <tr>
-                    <td class="font-bold">Источник финансирования:</td>
-                    <td>
-                      Cубсидия департамента социального развития администрации
-                      города Красноярска, собственные средства.
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="font-bold">Партнеры:</td>
-                    <td>
-                      Муниципальное автономное учреждение «Центр
-                      психолого-педагогической, медицинской и социальной помощи
-                      «Эго»;<br />Загородный стационарный детский
-                      оздоровительный лагерь «Ласточка»;<br />
-                      Муниципальное молодежное автономное учреждение «ИТ-Центр».
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="flex">
+                <img
+                  src="./assets/img/gameplayproject1.jpeg"
+                  alt="Видеоигры1"
+                  class="hidden md:block md:size-1/3 cursor-pointer pr-2"
+                  onclick="openModal(this.src)"
+                />
+                <table
+                  class="table border-separate border-spacing-y-2 bg-transparent md:w-2/3"
+                >
+                  <tbody>
+                    <tr>
+                      <td class="font-bold">Срок реализации:</td>
+                      <td>Летний период 2024 года.</td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold">Охват:</td>
+                      <td>
+                        Более 1500 детей, проживающих на территории города
+                        Красноярска.
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold">Место проведения:</td>
+                      <td>Загородный лагерь «Ласточка».</td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold">Источник финансирования:</td>
+                      <td>
+                        Cубсидия департамента социального развития администрации
+                        города Красноярска, собственные средства.
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="font-bold">Партнеры:</td>
+                      <td>
+                        Муниципальное автономное учреждение «Центр
+                        психолого-педагогической, медицинской и социальной
+                        помощи «Эго»;<br />Загородный стационарный детский
+                        оздоровительный лагерь «Ласточка»;<br />
+                        Муниципальное молодежное автономное учреждение
+                        «ИТ-Центр».
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
             <div class="tab-content px-2" id="second-tab">
               <div class="flex flex-col md:flex-row">
@@ -877,20 +712,36 @@
               </div>
             </div>
             <div class="tab-content" id="third-tab">
-              <div class="flex flex-col flex-wrap md:flex-row">
-                <!-- Image -->
-                <img
-                  src="./assets/img/gameplayproject1.jpeg"
-                  alt="Видеоигры1"
-                  class="md:w-1/2 cursor-pointer p-1"
-                  onclick="openModal(this.src)"
-                />
-                <img
-                  src="./assets/img/gameplayproject2.jpeg"
-                  alt="Видеоигры1"
-                  class="md:w-1/2 cursor-pointer p-1"
-                  onclick="openModal(this.src)"
-                />
+              <div
+                class="swiper-container swiper-games-container overflow-hidden md:mx-20 mb-10 lg:mx-40"
+              >
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img
+                      src="./assets/img/gameplayproject1.jpeg"
+                      alt="Видеоигры1"
+                      class="cursor-pointer"
+                      onclick="openModal(this.src)"
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="./assets/img/gameplayproject2.jpeg"
+                      alt="Видеоигры1"
+                      class="cursor-pointer"
+                      onclick="openModal(this.src)"
+                    />
+                  </div>
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination swiper-games-pagination"></div>
+                <!-- Add Navigation -->
+                <div
+                  class="swiper-button-next swiper-games-button-next swiper-navBtn"
+                ></div>
+                <div
+                  class="swiper-button-prev swiper-games-button-prev swiper-navBtn"
+                ></div>
               </div>
             </div>
           </div>
