--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -139,7 +139,7 @@
             <a href="#authors">Авторы</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
-            <a href="gamelib.html" target="_blank">Библиотека игр</a>
+            <a href="gamelib.html">Библиотека игр</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
             <a href="#contacts">Контакты</a>
