--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -155,28 +155,9 @@
               alt="Методика"
               class="w-20 lg:w-40 2xl:w-52"
           /></a>
-
-          <a
-            class="hidden lg:flex flex-col justify-center items-center"
-            href="https://www.enisey.tv/"
-            target="_blank"
-            ><img
-              src="../assets/img/enisey-logo.png"
-              alt="Енисей"
-              class="w-10 lg:w-16 2xl:w-32"
-          /></a>
         </div>
 
         <div class="flex items-center">
-          <a
-            class="hidden lg:flex flex-col justify-center items-center"
-            href="https://www.enisey.tv/"
-            target="_blank"
-            ><img
-              src="../assets/img/enisey-logo.png"
-              alt="Енисей"
-              class="w-10 lg:w-16 2xl:w-32"
-          /></a>
           <div class="flex flex-col lg:ml-6 2xl:ml-10">
             <a href="tel:+79029272400"
               ><p class="text-sm lg:text-base">+7 902 927-24-00</p></a
@@ -187,7 +168,7 @@
             >
           </div>
           <div class="ml-4 lg:ml-6 2xl:ml-10">
-            <a href="https://vk.com/genesiskrsk" target="_blank"
+            <a href="https://vk.com/genesiskrsk"
               ><img
                 src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
@@ -248,7 +229,7 @@
             пройти игру самостоятельно.
           </div>
           <div>Сокращения: Playstation – PS</div>
-          <div>Персональный компьютер или ноутбук – ПК</div>
+          <div>Персональный компьютер, ноутбук или Steam Desk - ПК</div>
         </div>
         <div class="hidden md:block mt-10">
           <table class="table-auto">
@@ -284,18 +265,6 @@
       </a>
     </main>
     <footer class="bg-slate-900 border-t border-slate-300">
-      <div class="flex justify-center items-center gap-x-4 mt-2 mb-2 md:hidden">
-        <div class="text-white">При поддержке ТК "Енисей"</div>
-        <a
-          class="flex flex-col justify-center items-center"
-          href="https://www.enisey.tv/"
-          target="_blank"
-          ><img
-            src="../assets/img/enisey-logo.png"
-            alt="Енисей"
-            class="w-10 lg:w-16 2xl:w-32"
-        /></a>
-      </div>
       <div
         class="hidden md:flex min mx-10 max-mx-32 justify-between max-sm:px-2 py-4"
       >
