--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -229,7 +229,7 @@
             пройти игру самостоятельно.
           </div>
           <div>Сокращения: Playstation – PS</div>
-          <div>Персональный компьютер, ноутбук или Steam Desk - ПК</div>
+          <div>Персональный компьютер, ноутбук или Steam Deck - ПК</div>
         </div>
         <div class="hidden md:block mt-10">
           <table class="table-auto">
