contacts games fix

--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -436,14 +436,17 @@
             <h2>Адрес:</h2>
             <p>г. Красноярск, улица 60 лет Октября, 102</p>
             <h3 class="pt-1.5 pb-1.5">Делопроизводство:</h3>
-            <p>+7(950) 981-54-81 Куницина Екатерина</p>
+            <p>+7(950) 981-54-81</p>
+            <p>Куницина Екатерина</p>
             <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
-            <p>+7(902) 927-24-00 Юрков Дмитрий Владимирович</p>
-            <h2 class="p-0">Email:</h2>
+            <p>+7(902) 927-24-00</p>
+            <p>Юрков Дмитрий</p>
             <p>genesispsykrsk@gmail.com</p>
-            <h2 class="p-0">Директор:</h2>
-            <p>Федотиков Матвей Александрович</p>
-            <p>+7(983) 199-23-91</p>
+            <h2 class="p-0 mt-2">Директор:</h2>
+            <p>Милованова Екатерина</p>
+            <p>+7 950 406-26-12</p>
+            <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
+            <p>Федотиков Матвей</p>
             <p>matveyfedotikov@gmail.com</p>
           </div>
         </div>
@@ -458,12 +461,13 @@
               <p>Куницина Екатерина</p>
               <h3 class="pt-1.5 pb-1.5">По общим вопросам:</h3>
               <p>+7(902) 927-24-00</p>
-              <p>Юрков Дмитрий Владимирович</p>
-              <h2 class="p-0">Email:</h2>
+              <p>Юрков Дмитрий</p>
               <p>genesispsykrsk@gmail.com</p>
-              <h2 class="p-0">Директор:</h2>
-              <p>Федотиков Матвей Александрович</p>
-              <p>+7(983) 199-23-91</p>
+              <h2 class="p-0 mt-2">Директор:</h2>
+              <p>Милованова Екатерина</p>
+              <p>+7 950 406-26-12</p>
+              <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
+              <p>Федотиков Матвей</p>
               <p>matveyfedotikov@gmail.com</p>
             </div>
           </div>
